--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,13 @@
     <div class="row">
       <div class="col-md-4 col-md-offset-4">
         <div class="form-inputs">
+          <%= f.input :first_name,
+                      required: true,
+                      autofocus: true %>
 
+          <%= f.input :last_name,
+                      required: true,
+                      autofocus: true %>
           <%= f.input :email,
                       required: true,
                       autofocus: true,
