--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
         <div class="badge-container">
           <%= link_to "Log in", new_user_session_path, class: 'btn btn-primary' %>
           <%= link_to "Sign up", new_user_registration_path, class: 'btn btn-primary' %>
-          <%= link_to "Sign out", destroy_user_session_path, class: 'btn btn-danger'  %>
+          <%= link_to "Sign out", destroy_user_session_path, :method => :delete , class: 'btn btn-danger'  %>
 <!--           <a href="#" class="navbar-lewagon-link">Messages <span class="badge badge-pill badge-secondary text-white">5</span></a> -->
         </div>
         <div class="dropdown">
