--- a/app/views/babies/index.html.erb
+++ b/app/views/babies/index.html.erb
@@ -13,8 +13,11 @@
     <!-- insert <div class="card"> -->
       <% @babies.each do |baby| %>
         <div class="col-xs-12 col-sm-4">
-          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('http://www.coloori.com/wp-content/uploads/2016/08/razmoketcassebonbon.jpg');">
-            <p><%= baby.name %></p>
+          <div class="card">
+            <div class="card-description" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('http://www.coloori.com/wp-content/uploads/2016/08/razmoketcassebonbon.jpg');">
+             <h2><%= baby.name %></h2>
+             <p><%= baby.age %>y</p>
+            </div>
           </div>
         </div>
       <% end %>
