--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -27,10 +27,11 @@
   left: 10px;
 }
 .card-description h2 {
-  font-size: 20px;
+  font-size: 24px;
 }
 .card-description p {
   font-size: 14px;
+  opacity: 0.7;
   font-weight: lighter;
 }
 .card-link {
