--- a/app/views/babies/index.html.erb
+++ b/app/views/babies/index.html.erb
@@ -14,7 +14,14 @@
       <% @babies.each do |baby| %>
         <div class="col-xs-12 col-sm-4">
           <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('http://www.coloori.com/wp-content/uploads/2016/08/razmoketcassebonbon.jpg');">
-            <p><%= baby.name %></p>
+            <h2><%= baby.name %></h2>
+            <p><%= baby.age %>y</p>
+          </div>
+          <div class="card-footer">
+            <p>rating</p><p><%= baby.price %>€/j</p>
+            <div class="check">
+              <%= link_to "View Profile !", baby_path(baby) %>
+            </div>
           </div>
         </div>
       <% end %>
