--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,11 +1,7 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <%= simple_form_for [baby, booking] do |f| %>
-        <%= f.input :start_date %>
-        <%= f.input :end_date %>
-        <%= f.submit class: 'btn btn-primary' %>
-      <% end %>
-    </div>
-  </div>
-</div>
+
+<%= simple_form_for [baby, booking] do |f| %>
+<%= f.input :start_date, as: :date, html5: true %>
+<%= f.input :end_date, as: :date, html5: true %>
+<%= f.submit "envoyer" %>
+<% end %>
+
