update show page

--- a/app/views/babies/index.html.erb
+++ b/app/views/babies/index.html.erb
@@ -20,7 +20,7 @@
           <div class="card-footer">
             <p>rating</p><p><%= baby.price %>€/j</p>
             <div class="check">
-              <%= link_to "View Profile !", baby_path(baby) %>
+              <%= link_to "View Profile !", baby_path(baby), :class => "btn btn-primary" %>
             </div>
           </div>
         </div>
