--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <h2 class="text-center">Add a new review</h2>
-
+    <h2 class="text-center">Add a new review for <%= @baby.name %></h2>
+  <br>
     <div class="col-md-4 col-md-offset-4">
       <%= simple_form_for [@baby, @review] do |f| %>
         <%= f.input :content %>
@@ -12,16 +12,5 @@
       <%= link_to 'Back', baby_path(@baby) %>
     </div>
   </div>
-
-  <div class="row">
-    <h2 class="text-center"><%= @baby.name %> reviews</h2>
-  </div>
-
-  <p><% @baby.reviews do |review| %>
-    <%= review.content %>
-    <%= review.rating %>
-  <% end %></p>
-
-
 </div>
 
