--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,10 +5,10 @@
     <div class="container" style="margin-top: 60px;">
       <div class="row">
         <div class="col-md-4 col-md-offset-4">
-          <%= simple_form_for @page do |f| %>
+          <%= simple_form_for :query, url: results_path, method: :get do |f| %>
 
             <div class="form-inputs">
-              <%= f.input %>
+              <%= f.input :city %>
             </div>
 
             <div class="form-actions">
@@ -18,6 +18,9 @@
         </div>
       </div>
     </div>
+
+
+
 
 
 
