--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
     <div class="navbar-lewagon">
-      <a href="#">
+      <%= link_to root_path do %>
         <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" class="brand">
-      </a>
+      <% end %>
 
       <!-- displayed on laptops -->
       <div class="navbar-lewagon-actions d-none d-sm-flex">
