Add dotenv - Protect my secret data in .env file

--- a/app/views/babies/new.html.erb
+++ b/app/views/babies/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Babies#new</h1>
-<p>Find me in app/views/babies/new.html.erb</p>
+<div class="new-baby-container">
+
+<h3> Ajouter ton bébé en location : </h3>
+<%= render 'form', baby: @baby%>
+
+</div>
