change view booking index + new

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -2,6 +2,8 @@
 <%= simple_form_for [baby, booking] do |f| %>
 <%= f.input :start_date, as: :date, html5: true %>
 <%= f.input :end_date, as: :date, html5: true %>
-<%= f.submit "envoyer" %>
+<%= f.submit "Book my baby", class: "btn btn-success" %>
 <% end %>
+
+
 
