--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,14 @@
-
-<div class="booking-container">
-<h3>Book a new baby :  </h3>
-
-<%= render 'form', booking: @booking, baby: @baby %>
-
-<!-- <p> <%#= link_to "Booker votre nouveau bébé", baby_path(@baby), data: { confirm: "Bravo votre bébé a été booké ! " } %> </p> -->
+<div class="container">
+  <div class="row">
+  <h2 class="text-center">Book <%= @baby.name %> :</h2>
+    <br>
+    <div class="col-md-4 col-md-offset-4">
+      <%= render 'form', booking: @booking, baby: @baby %>
+    <br>
+    <%= link_to 'Back', baby_path(@baby) %>
+    </div>
+  </div>
 </div>
+
+
+
