--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,10 @@
 
-<div class="booking-container">
-<h3>Book a new baby :  </h3>
+<div class="container">
+  <div class="booking-container">
+    <h3>Book a new baby :  </h3>
 
-<%= render 'form', booking: @booking, baby: @baby %>
+    <%= render 'form', booking: @booking, baby: @baby %>
 
-<!-- <p> <%#= link_to "Booker votre nouveau bébé", baby_path(@baby), data: { confirm: "Bravo votre bébé a été booké ! " } %> </p> -->
+  <!-- <p> <%#= link_to "Booker votre nouveau bébé", baby_path(@baby), data: { confirm: "Bravo votre bébé a été booké ! " } %> </p> -->
+  </div>
 </div>
