--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
 <!--         <a href="#" class="navbar-lewagon-link">Browse flats</a> -->
         <div class="badge-container">
           <% if user_signed_in? %>
-            <i class="fas fa-baby"></i>
+            <%= image_tag "baby.png", alt: "alttext", class: "bebe" %>
             <%= link_to "Sign out", destroy_user_session_path, :method => :delete , class: 'btn btn-danger'  %>
           <% else %>
 
@@ -30,6 +30,7 @@
             </div>
          </div>
       </div>
+
 
       <!-- displayed on phone / tablet -->
 <!--       <div class="navbar-lewagon-actions d-block d-sm-none">
