--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,9 @@
 <!--         <a href="#" class="navbar-lewagon-link">Browse flats</a> -->
         <div class="badge-container">
           <% if user_signed_in? %>
+          <%= link_to new_baby_path do %>
             <%= image_tag "baby.png", alt: "alttext", class: "bebe" %>
+          <% end %>
             <%= link_to "Sign out", destroy_user_session_path, :method => :delete , class: 'btn btn-danger'  %>
           <% else %>
 
