--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,10 +1,21 @@
-<h1>My bookings</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4">
+    <h2 class="text-center">My bookings</h2>
+    <% @bookings.each do |booking| %>
+      <div class="card">
+          <li>Name: <%= booking.baby.name %></li>
+          <li>Booked</li>
+          <li>From:<%= booking.start_date %></li>
+          <li>To:<%= booking.end_date %></li>
+      </div>
+    <% end %>
+    </div>
+  </div>
+</div>
 
 
-<ul><% @bookings.each do |booking| %>
-  <li><%= @baby.name %></li>
-  <li><%= @booking.start_date %></li>
-  <li><%= @booking.end_date %></li>
-  <% end %>
-</ul>
+
+
+
 
