correctif sur db et edit baby

--- a/app/views/babies/edit.html.erb
+++ b/app/views/babies/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Babies#edit</h1>
-<p>Find me in app/views/babies/edit.html.erb</p>
+<h1>Hello ! what do you want to edit ?</h1>
+
+
+
+<%= render 'form', baby: @baby%>
