--- a/app/assets/stylesheets/components/_card-show.scss
+++ b/app/assets/stylesheets/components/_card-show.scss
@@ -11,17 +11,26 @@
   grid-template-rows: 50% 25% 25%;
 }
 
-// .card-info {
-//   grid-row: 1/ span 1;
-//   grid-column: 1/ span 2;
-// }
+.card-info {
+  color: rgb(10, 10, 10);
+  font-size: 20px;
+}
 
-// .card-content {
-//   grid-row: 1/ span 2;
-//   grid-column: 2/ span 2;
-// }
+.card-content {
+  color: rgb(10, 10, 10);
+}
 
 .card-flex {
   display: flex;
   justify-content: space-between;
+}
+
+.element-flex {
+  display: flex;
+  justify-content: space-around;
+}
+
+#btn-flex {
+  display: flex;
+  justify-content: center;
 }
