--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -3,7 +3,7 @@
   <h1><%= @baby.name %></h1>
   <h3><strong>Age :</strong><%= @baby.age %> years</h3>
   <p><strong>Présentation :</strong> <%= @baby.description %></p>
-  <p><strong>Prix :</strong> <%= @baby.price %></p>
+  <p><strong>Prix :</strong> <%= @baby.price %> $ </p>
   <p>Reviews</p>
 </div>
 
