--- a/app/views/babies/edit.html.erb
+++ b/app/views/babies/edit.html.erb
@@ -1,5 +1,17 @@
 <h1>Hello ! what do you want to edit ?</h1>
 
 
+<%= simple_form_for @baby do |f| %>
+<%= f.input :name %>
+<%= f.input :age %>
+<%= f.input :address  %>
+<%= f.input :city %>
+<%= f.input :description  %>
+<%= f.input :price  %>
+<%= f.input :photo %>
+<%= f.input :photo_cache, as: :hidden %>
+<%= f.submit "Updater ton bébé" %>
+<% end %>
 
-<%= render 'form', baby: @baby%>
+
+<%= cl_image_tag @baby.photo, height: 200, width: 200, crop: :fill %>
