--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -12,12 +12,13 @@
     <div class="card-info">
       <h2><%= @baby.name %></h2>
       <p><%= @baby.age %> years</p>
+      <%= cl_image_tag @baby.photo, height: 100, width: 100, crop: :fill %>
       <%= link_to "Book it !", new_baby_booking_path(@baby), :class => "btn btn-success" %>
     </div>
   </div>
   <div class="card element-flex card-grid col-xs-12 col-sm-8 col-md-8">
     <div class="card-content">
-      <h4>More about <%= @baby.name%></h4>
+      <h4><%= @baby.name%></h4>
       <p class="text-justify"><%= @baby.description%></p>
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos maxime, ipsam atque dolorem quas quae dignissimos deserunt, dolores consequatur facere, illo corrupti doloribus quaerat quasi id voluptatem dolor totam porro.</p>
       </p>
@@ -26,10 +27,11 @@
 </div>
 <div class="container" id="btn-flex">
   <%= link_to "Add a review", new_baby_review_path(@baby), :class => "btn btn-primary" %>
+    <%= link_to "Modifier ton bébé !", edit_baby_path(@baby), :class => "btn btn-warning" %>
 </div>
 <div class="message">
     <% @baby.reviews.each do |review|%>
-    <img class="review-avatar" src="https://kitt.lewagon.com/placeholder/users/gabriel-dehan">
+    <img class="review-avrata" src="https://kitt.lewagon.com/placeholder/users/gabriel-dehan">
     <div class="message-name">
       <h3>Gab Dehan</h3>
       <p>10/07/17</p>
