--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4 col-md-offset-4">
     <h2 class="text-center">My bookings</h2>
+    <div class="col-md-4 col-md-offset-4">
     <% @bookings.each do |booking| %>
       <div class="card">
           <li>Name: <%= booking.baby.name %></li>
@@ -10,6 +10,8 @@
           <li>To:<%= booking.end_date %></li>
       </div>
     <% end %>
+    <br>
+  <%= link_to "Book another baby", new_baby_booking_path(@baby), class: 'btn btn-success' %>
     </div>
   </div>
 </div>
