clickable cards not redirect to baby show

--- a/app/assets/stylesheets/components/_cardremi.scss
+++ b/app/assets/stylesheets/components/_cardremi.scss
@@ -36,15 +36,29 @@
   position: relative;
 }
 
+
+
 .card-trip-infos .card-trip-user {
   position: absolute;
   right: 16px;
   top: -20px;
   width: 40px;
+  opacity: 1;
 }
 
 @media (min-width: 1200px){
   .container{
     width: 1400px;
   }
+}
+
+.decoration {
+  text-decoration: none;
+  color: black;
+  // opacity: 0.6;
+    &:hover{
+      text-decoration: none;
+      color: black;
+      // opacity: 1;
+    }
 }
