--- a/app/views/babies/search.html.erb
+++ b/app/views/babies/search.html.erb
@@ -23,6 +23,7 @@
         </div>
       </div>
     <% end %>
+     <%= link_to "Retour", root_path(@baby), :class => "btn btn-primary" %>
   </div>
 </div>
 
