--- a/app/views/babies/edit.html.erb
+++ b/app/views/babies/edit.html.erb
@@ -1,17 +1,19 @@
-<h1>Hello ! what do you want to edit ?</h1>
+<div class="container">
+  <h1>Hello ! what do you want to edit ?</h1>
 
 
-<%= simple_form_for @baby do |f| %>
-<%= f.input :name %>
-<%= f.input :age %>
-<%= f.input :address  %>
-<%= f.input :city %>
-<%= f.input :description  %>
-<%= f.input :price  %>
-<%= f.input :photo %>
-<%= f.input :photo_cache, as: :hidden %>
-<%= f.submit "Updater ton bébé" %>
-<% end %>
+  <%= simple_form_for @baby do |f| %>
+  <%= f.input :name %>
+  <%= f.input :age %>
+  <%= f.input :address  %>
+  <%= f.input :city %>
+  <%= f.input :description  %>
+  <%= f.input :price  %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
+  <%= f.submit "Updater ton bébé" %>
+  <% end %>
 
 
-<%= cl_image_tag @baby.photo, height: 200, width: 200, crop: :fill %>
+  <%= cl_image_tag @baby.photo, height: 200, width: 200, crop: :fill %>
+</div>
