--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,6 +32,7 @@
 
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               <%= link_to "Manage account", edit_user_registration_path, class: 'dropdown-item' %>
+              <%= link_to "My bookings", edit_user_registration_path, class: 'dropdown-item' %>
               <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
             </div>
           <% end %>
