petites modifs pour enlever la tête de Kévin dans page results + retrait de lorem ipsum dans baby show

--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -18,10 +18,8 @@
   </div>
   <div class="card element-flex card-grid col-xs-12 col-sm-8 col-md-8">
     <div class="card-content">
-      <h4><%= @baby.name%></h4>
-      <p class="text-justify"><%= @baby.description%></p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos maxime, ipsam atque dolorem quas quae dignissimos deserunt, dolores consequatur facere, illo corrupti doloribus quaerat quasi id voluptatem dolor totam porro.</p>
-      </p>
+      <h4>Nom: <%= @baby.name%></h4>
+      <p class="text-justify">Description: <%= @baby.description%></p>
     </div>
   </div>
 </div>
