--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
     <div class="navbar-lewagon">
       <%= link_to root_path do %>
-        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" class="brand">
+        <%= image_tag "Logo babynb.jpg", alt: "alttext", class: "bebe-logo" %>
       <% end %>
 
       <!-- displayed on laptops -->
