petites modif de link_to + wording

--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -35,7 +35,7 @@
       <p><%= review.created_at.strftime("%d-%m-%Y") %></p>
     </div>
     <div class="message-body">
-   <p><strong>Title</strong></p>
+   <p><strong>Review</strong></p>
       <p>
         <%= review.content %>
         <% end %>
