--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -11,7 +11,7 @@
       </div>
     <% end %>
     <br>
-  <%= link_to "Book another baby", new_baby_booking_path(@baby), class: 'btn btn-success' %>
+  <%= link_to "Book another baby", root_path, class: 'btn btn-success' %>
     </div>
   </div>
 </div>
