--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -38,13 +38,9 @@
     </div>
     <div class="message-body">
    <p><strong>Title</strong></p>
-      <p>
-        <%= review.content %>
+       <%= review.content %>
+      <p class="rating"><%= review.rating %>/5</p>
         <% end %>
-      </p>
-    </div>
-    <div class="message-status">
-      <p class="rating">5/5</p>
     </div>
   </div>
 </div>
