changed logo extension

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
     <div class="navbar-lewagon">
       <%= link_to root_path do %>
-        <%= image_tag "logobabynb.jpeg", alt: "alttext", class: "bebe-logo" %>
+        <%= image_tag "babynb.png", alt: "alttext", class: "bebe-logo" %>
       <% end %>
 
       <!-- displayed on laptops -->
