--- a/app/views/babies/show.html.erb
+++ b/app/views/babies/show.html.erb
@@ -42,7 +42,7 @@
    <p><strong>Review</strong></p>
       <p>
         <%= review.content %>
-
+        <p class="rating"><%= review.rating %>/5</p>
         <% end %>
     </div>
   </div>
