--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,21 +1,24 @@
-<div class="container">
-  <div class="row">
-    <h2 class="text-center">My bookings</h2>
-    <div class="col-md-4 col-md-offset-4">
-    <% @bookings.each do |booking| %>
-      <div class="card">
-          <li>Name: <%= booking.baby.name %></li>
-          <li>Booked</li>
-          <li>From:<%= booking.start_date %></li>
-          <li>To:<%= booking.end_date %></li>
+<div class="page2">
+
+  <div class="container">
+    <div class="row">
+      <h2 class="text-center">My bookings</h2>
+      <div class="col-md-4 col-md-offset-4">
+      <% @bookings.each do |booking| %>
+        <div class="card">
+            <li>Name: <%= booking.baby.name %></li>
+            <li>Booked</li>
+            <li>From:<%= booking.start_date %></li>
+            <li>To:<%= booking.end_date %></li>
+        </div>
+      <% end %>
+      <br>
+    <%= link_to "Book another baby", root_path, class: 'btn btn-success' %>
       </div>
-    <% end %>
-    <br>
-  <%= link_to "Book another baby", root_path, class: 'btn btn-success' %>
     </div>
   </div>
-</div>
 
+</div>
 
 
 
