--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,11 +1,13 @@
-<div class="container">
-  <div class="row">
-  <h2 class="text-center">Book <%= @baby.name %> :</h2>
-    <br>
-    <div class="col-md-4 col-md-offset-4">
-      <%= render 'form', booking: @booking, baby: @baby %>
-    <br>
-    <%= link_to 'Back', baby_path(@baby) %>
+<div class="page2">
+  <div class="container">
+    <div class="row">
+    <h2 class="text-center">Book <%= @baby.name %> :</h2>
+      <br>
+      <div class="col-md-4 col-md-offset-4">
+        <%= render 'form', booking: @booking, baby: @baby %>
+      <br>
+      <%= link_to 'Back', baby_path(@baby) %>
+      </div>
     </div>
   </div>
 </div>
