--- a/app/views/babies/search.html.erb
+++ b/app/views/babies/search.html.erb
@@ -1,10 +1,10 @@
 <h2 class="text-center">Votre recherche de bébés</h2>
 
 
-<div class="container">
+<div class="container map-container">
   <div class="row">
     <% @babies.each do |baby| %>
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
       <%= link_to baby_path(baby), class: 'decoration' do %>
           <div class="card-trip">
             <%= cl_image_tag baby.photo %>
@@ -24,9 +24,7 @@
       <% end %>
         </div>
     <% end %>
-     <%= link_to "Retour", root_path(@baby), :class => "btn btn-primary" %>
   </div>
-</div>
 
 <div
   id="map"
@@ -35,3 +33,7 @@
   data-markers="<%= @markers.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 ></div>
+</div>
+<div class="text-center">
+<%= link_to "Retour", root_path(@baby), :class => "btn btn-primary" %>
+</div>
