css de la page booking terminé

--- a/app/assets/stylesheets/components/_showbooking.scss
+++ b/app/assets/stylesheets/components/_showbooking.scss
@@ -1,3 +1,4 @@
+
 .message-name-booking {
   width: 500px;
 }
@@ -10,4 +11,19 @@
 }
 .message-name-booking {
   margin-left: 30px;
+}
+.accepted {
+  color: #5DAA6E;
+}
+.image-booking {
+  height: 150px;
+}
+.margin-date {
+  margin-top: 20px !important;
+}
+.text-center {
+  font-family: 'Hind Vadodara', cursive;
+  color: #0F1664;
+  font-size: 40px;
+  margin-bottom: 20px;
 }
