--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,24 +1,23 @@
+<div class="background-body">
+<h2 class="text-center">My bookings : </h2>
 <div class="booking-body">
-<h2 class="text-center">My bookings</h2>
 
 <% @bookings.each do |booking|%>
 <div class="message image-booking">
-  <%= cl_image_tag booking.baby.photo, :transformation=>[
-    {:width=>100, :height=>100, :radius=>"max"},
-    {:width=>100, :crop=>"scale"}
-    ] %>
+  <%= cl_image_tag booking.baby.photo, width: 80, height: 80, crop: :fill%>
 
   <div class="message-name message-name-booking">
       <%= booking.baby.name %>
-      <p>From : <%= booking.start_date.strftime("%d-%m-%Y") %></p>
+      <p class="margin-date">From : <%= booking.start_date.strftime("%d-%m-%Y") %></p>
       <p>To : <%= booking.end_date.strftime("%d-%m-%Y") %></p>
   </div>
   <div class="message-status message-status-booking">
-    <p class="status pending">Pending</p>
+    <p class="status accepted">Accepted</p>
     <p class="price"> </p>
       $ <%= (booking.end_date - booking.start_date).to_i * booking.baby.price %>
     </p>
   </div>
 </div>
 <% end %>
+</div>
 </div>
