--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,5 +1,5 @@
 <div class="background-body">
-<h2 class="text-center">My bookings : </h2>
+<h2 class="text-center-booking">My bookings : </h2>
 <div class="booking-body">
 
 <% @bookings.each do |booking|%>
