--- a/app/assets/stylesheets/components/_showbooking.scss
+++ b/app/assets/stylesheets/components/_showbooking.scss
@@ -21,7 +21,7 @@
 .margin-date {
   margin-top: 20px !important;
 }
-.text-center {
+.text-center-booking {
   font-family: 'Hind Vadodara', cursive;
   color: #0F1664;
   font-size: 40px;
