--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,22 +2,19 @@
   <div class="container">
     <h1>Rent a baby now!</h1>
 
-    <div class="container" style="margin-top: 60px;">
+<!--     <div class="container" style="margin-top: 60px;">
       <div class="row">
-        <div class="col-md-4 col-md-offset-4">
-          <%= simple_form_for :query, url: results_path, method: :get do |f| %>
+        <div class="col-md-4 col-md-offset-4"> -->
 
-            <div class="form-inputs">
-              <%= f.input :city %>
-            </div>
-
-            <div class="form-actions">
+          <%= simple_form_for :query, url: results_path, method: :get, html: { class: "form-inline baby-form" } do |f| %>
+              <%= f.input :city, placeholder: "Paris", input_html: { required: true }  %>
+              <%= f.input :age, as: :integer, placeholder: "1" %>
+              <%= f.input :price, as: :integer, placeholder: "300"  %>
               <%= f.button :submit, "Search", class: 'btn btn-success' %>
-            </div>
           <% end %>
-        </div>
+<!--         </div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 </div>
