--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -6,7 +6,7 @@ label {
   color: white;
 }
 
-.baby-form {
+.baby-form .label {
   display: flex;
   align-items: flex-end;
   justify-content: center;
