changed label form design

--- a/app/assets/stylesheets/components/_search.scss
+++ b/app/assets/stylesheets/components/_search.scss
@@ -2,11 +2,11 @@ input, label {
   display:block;
 }
 
-label {
+.baby-form label {
   color: white;
 }
 
-.baby-form .label {
+.baby-form {
   display: flex;
   align-items: flex-end;
   justify-content: center;
