--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -2,12 +2,12 @@
   width: 55px;
   height: 55px;
   border-radius: 50%;
-  border: 2px solid black;
+  // border: 1px solid black;
 }
 
 .avatar-lg{
   width: 130px;
   height: 130px;
   border-radius: 50%;
-  border: 2px solid black;
+  // border: 1px solid black;
 }
