--- a/app/assets/stylesheets/layouts/_page.scss
+++ b/app/assets/stylesheets/layouts/_page.scss
@@ -1,9 +1,4 @@
 .page {
-  height: 78vh;
-}
-.page2 {
-  height: 81vh;
-}
-.page3 {
-  height: 78vh;
+  min-height: 100vh;
+  position: relative;
 }
