--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,11 +5,11 @@
   justify-content: space-between;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  // position:fixed;
+  position: absolute;
   left:0px;
   bottom:0px;
   width:100%;
-  height: 65px;
+  height: 5rem;
 }
 .footer-links {
   display: flex;
