--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,11 @@
 <div class="footer">
-  <div class="footer-links">
+<!--   <div class="footer-links">
     <a href="#"><i class="fab fa-github"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-facebook"></i></a>
     <a href="#"><i class="fab fa-linkedin"></i></a>
-  </div>
-  <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i> by the Happy 1000 family
+  </div> -->
+  <div>
+    Made with <i class="fas fa-heart"></i> by Happy 1000 Family© 2019
   </div>
 </div>
